--- a/themes/bootstrap/templates/blog/detail.html
+++ b/themes/bootstrap/templates/blog/detail.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>博客系统</title>
-</head>
-<body>
+{% extends "./base.html" %}
+{% block title %}
+    {{ post.title }}
+{% endblock %}
+
+
+{% block main %}
+
     {% if post %}
         <h1>{{ post.title }}</h1>
         <div>
@@ -16,5 +17,5 @@
             {{ post.content }}
         </p>
     {% endif %}
-</body>
-</html>
+
+{% endblock %}
