搜索和作者过滤

--- a/themes/bootstrap/templates/blog/detail.html
+++ b/themes/bootstrap/templates/blog/detail.html
@@ -9,8 +9,8 @@
     {% if post %}
         <h1>{{ post.title }}</h1>
         <div>
-            <span>分类：{{ post.category.name }}</span>
-            <span>作者：{{ post.owner.username }}</span>
+            <span class="card-link">分类:<a href="{% url 'category-list' post.category_id %}">{{ post.category.name }}</a></span>
+            <span class="card-link">作者:<a href="{% url 'author' post.owner.id %}">{{ post.owner.username }}</a></span>
         </div>
         <hr/>
         <p>
