--- a/themes/bootstrap/templates/blog/base.html
+++ b/themes/bootstrap/templates/blog/base.html
@@ -8,36 +8,78 @@
         {% endblock %}
         - pilgrimage博客系统
     </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.css">
+    <style>
+        .post {
+            margin-bottom: 5px;
+        }
+    </style>
 </head>
+
 <body>
 
-<div>顶部分类：
-    {% for category in navs %}
-        <a href="{% url 'category-list' category.id %}">{{ category.name }}</a>
-    {% endfor %}
-</div>
+    <div class="container head">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="/">首页</a>
+            <div class="collapse navbar-collapse" id="navbarSupportContent">
+                <ul class="navbar-nav mr-auto">
+                    {% for category in navs %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'category-list' category.id %}">{{ category.name }}</a>
+                        </li>
+                    {% endfor %}
+                </ul>
+                <form class="form-inline" action="/search/" method="GET">
+                    <input class="form-control" type="search" name="keyword" placeholder="Search" aria-label="Search" value="{{ keyword }}"/>
+                    <button class="btn btn-outline-success" type="submit">搜索</button>
+                </form>
+            </div>
+        </nav>
+        <div class="jumbotron">
+            <h1 class="display-4">Pilgrimage</h1>
+            <p class="lead">博客系统</p>
+        </div>
+    </div>
 
-<hr/>
+    <div class="container main">
+        <div class="row">
+            <div class="col-9 post-list">
+                {% block main %}
+                {% endblock %}
+            </div>
+            <div class="col-3">
+                {% block sidebar %}
+                    {% for sidebar in sidebars %}
+                        <div class="card sidebar">
+                            <div class="card-body">
+                                <h4 class="card-title">{{ sidebar.title }}</h4>
+                                <p>
+                                    {{ sidebar.content_html }}
+                                </p>
+                            </div>
+                        </div>
+                    {% endfor %}
+                {% endblock %}
+            </div>
+        </div>
+    </div>
 
-{% block main %}
-
-{% endblock %}
-
-<div>底部分类：
-    {% for category in categories %}
-        <a href="{% url 'category-list' category.id %}">{{ category.name }}</a>
-    {% endfor %}
-</div>
-
-<hr/>
-
-<div>侧边栏展示：
-    {% for sidebar in sidebars %}
-        <h4>{{ sidebar.title }}</h4>
-        {{ sidebar.content_html }}
-    {% endfor %}
-
-</div>
+    <footer class="footer">
+        {% block footer %}
+            <div class="container">
+                <hr/>
+                <nav class="nav category">
+                    {% for category in categories %}
+                        <a class="nav-link" href="{% url 'category-list' category.id %}">{{ category.name }}</a>
+                    {% endfor %}
+                </nav>
+            </div>
+            <div class="container power">
+                <span class="text-muted">Power by Universe</span>
+            </div>
+        {% endblock %}
+    </footer>
 
 </body>
 </html>
