--- a/themes/bootstrap/templates/config/blocks/sidebar_comments.html
+++ b/themes/bootstrap/templates/config/blocks/sidebar_comments.html
@@ -8,7 +8,7 @@
 <ul>
     {% for comment in comments %}
         <li>
-            <a href="{% url 'post-detail' comment.target.id %}">{{ comment.target.title }}</a>
+{#            <a href="{% url 'post-detail' comment.target.id %}">{{ comment.target.title }}</a>#}
             {{ comment.nickname }}：{{ comment.content }}
         </li>
     {% endfor %}
