--- a/themes/bootstrap/templates/config/blocks/sidebar_comments.html
+++ b/themes/bootstrap/templates/config/blocks/sidebar_comments.html
@@ -8,8 +8,11 @@
 <ul>
     {% for comment in comments %}
         <li>
-{#            <a href="{% url 'post-detail' comment.target.id %}">{{ comment.target.title }}</a>#}
-            {{ comment.nickname }}：{{ comment.content }}
+            <a href="{{ comment.target }}">{{ comment.target.title }}</a>
+            {{ comment.nickname }}：
+            {% autoescape off %}
+            {{ comment.content }}
+            {% endautoescape %}
         </li>
     {% endfor %}
 
