--- a/themes/bootstrap/templates/blog/detail.html
+++ b/themes/bootstrap/templates/blog/detail.html
@@ -4,6 +4,11 @@
     {{ post.title }}
 {% endblock %}
 
+{% block extra_head %}
+<link rel="stylesheet" href="https://cdn.bootcss.com/highlight.js/9.12.0/styles/googlecode.min.css">
+<script src="https://cdn.bootcss.com/highlight.js/9.12.0/highlight.min.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
+{% endblock %}
 
 {% block main %}
 
@@ -15,7 +20,9 @@
         </div>
         <hr/>
         <p>
+            {% autoescape off %}
             {{ post.content }}
+            {% endautoescape %}
         </p>
     {% endif %}
 
